--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,14 @@ Flask
 scikit-learn
 scipy 
 PyYAML
-gunicorn
+#gunicorn
 pandas
 -e .
 six
 dill
+Flask-SocketIO==4.3.1
+python-engineio==3.13.2
+python-socketio==4.6.0
+Werkzeug==2.0.1
+gunicorn==20.1.0
+eventlet==0.30.2
