--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,6 +15,10 @@ data_ingestion_config:
 
 data_validation_config:
   schema_file_name: schema.yaml
+  validation_report_file_name: report.json
+  validation_html_file_name: report_page.html
+  validation_object_file_name: validator
+  
 
 data_transformation_config:
   add_bedroom_per_room: true
